--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="stile/style.css">
 </head>
 <body>
+
+    <!-- header -->
     <header>
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
+        <div class="container">
+            <div class="row align-items-center">
                 <div class="col">
                     header
                 </div>
@@ -23,9 +25,32 @@
             </div>
         </div>
     </header>
-    <main>
+    <!-- fine header -->
 
+    <!-- jumbo -->
+    <div class="cs-jumbo">
+        <div class="container-fluid py-5">
+            <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">contenuto jumbo</div>
+        </div>
+    </div>
+    <!-- fine jumbo -->
+
+    <!-- main -->
+    <main>
+        <section class="cs-portfolio container">
+            <h1 class="text-center text-uppercase">Portfolio</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">img</div>
+                <div class="col">img</div>
+                <div class="col">img</div>
+                <div class="col">img</div>
+                <div class="col">img</div>
+                <div class="col">img</div>
+            </div>
+        </section>
     </main>
+    <!-- fine main -->
+
     <footer>
 
     </footer>
