--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
     <!-- header -->
-    <header>
-        <div class="container">
+    <header class="text-white">
+        <div class="container py-4">
             <div class="row">
                 <div class="col">
                     header
@@ -28,7 +28,7 @@
     <!-- fine header -->
 
     <!-- jumbo -->
-    <div class="cs-jumbo">
+    <div class="cs-jumbo text-white">
         <div class="container-fluid py-5">
             <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">
                 contenuto jumbo. <br>
@@ -57,8 +57,8 @@
         <!-- fine sezione immagini -->
 
         <!-- sezione about -->
-        <section class="cs-about container-fluid py-3 py-md-4 py-lg-5">
-            <div class="col-8 col-md-6 col-lg-6 mx-auto">
+        <section class="cs-about container-fluid py-3 py-md-4 py-lg-5 text-white">
+            <div class="col-8 col-md-6 mx-auto">
                 contenuto about. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, ea ipsum aut sapiente temporibus aperiam perferendis assumenda ab necessitatibus iure consequuntur delectus consequatur fugiat. Cupiditate odio tempore voluptatem voluptatum totam!
             Iusto laudantium possimus eligendi porro quod, tempora quia, reiciendis est vero sint ut fuga delectus praesentium, deserunt ea sit ab velit sed! Nostrum blanditiis earum tenetur consequatur nobis eligendi. Modi.
         </div>
@@ -67,7 +67,7 @@
 
          <!-- sezione form -->
          <section class="cs-form container-fluid py-3 py-md-4 py-lg-5">
-            <div class="col-8 col-md-6 col-lg-6 mx-auto">
+            <div class="col-8 col-md-6 mx-auto">
                 contenuto form. <br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem beatae magni. Tempora at facere eligendi dolore asperiores. Repudiandae modi at quis corrupti sapiente eos laborum? Odit ad culpa ullam!
                 Sed, voluptatum dolor. Officia, culpa sequi dicta hic vitae expedita, ipsa nemo repellendus maiores accusantium inventore beatae deserunt provident aut fugit assumenda. Excepturi minima illo sapiente aut nostrum quas nisi?
