--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 
     <!-- jumbo -->
     <div class="cs-jumbo text-white">
-        <div class="container-fluid py-5">
-            <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">
-                contenuto jumbo. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia commodi, rem, nihil inventore sint ex nulla numquam soluta illo non repellat nobis sit qui voluptatum maxime repellendus necessitatibus molestias?
-                Veritatis alias quas nihil fugit natus quam iusto nobis, vitae veniam consectetur totam temporibus repellat repudiandae laborum ad corrupti adipisci cupiditate voluptatibus pariatur hic, dolor animi! Doloribus quaerat libero laborum?
+        <div class="container-fluid py-3 py-md-4 py-lg-5">
+            <div class="row">
+                <div class="col-10 col-sm-8 col-lg-6 mx-auto">
+                    contenuto jumbo. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia commodi, rem, nihil inventore sint ex nulla numquam soluta illo non repellat nobis sit qui voluptatum maxime repellendus necessitatibus molestias?
+                    Veritatis alias quas nihil fugit natus quam iusto nobis, vitae veniam consectetur totam temporibus repellat repudiandae laborum ad corrupti adipisci cupiditate voluptatibus pariatur hic, dolor animi! Doloribus quaerat libero laborum?
+                </div>
+
             </div>
         </div>
     </div>
@@ -58,19 +61,25 @@
 
         <!-- sezione about -->
         <section class="cs-about container-fluid py-3 py-md-4 py-lg-5 text-white">
-            <div class="col-8 col-md-6 mx-auto">
-                contenuto about. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, ea ipsum aut sapiente temporibus aperiam perferendis assumenda ab necessitatibus iure consequuntur delectus consequatur fugiat. Cupiditate odio tempore voluptatem voluptatum totam!
-            Iusto laudantium possimus eligendi porro quod, tempora quia, reiciendis est vero sint ut fuga delectus praesentium, deserunt ea sit ab velit sed! Nostrum blanditiis earum tenetur consequatur nobis eligendi. Modi.
-        </div>
+            <div class="row">
+                <div class="col-8 col-md-6 mx-auto">
+                    contenuto about. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, ea ipsum aut sapiente temporibus aperiam perferendis assumenda ab necessitatibus iure consequuntur delectus consequatur fugiat. Cupiditate odio tempore voluptatem voluptatum totam!
+                Iusto laudantium possimus eligendi porro quod, tempora quia, reiciendis est vero sint ut fuga delectus praesentium, deserunt ea sit ab velit sed! Nostrum blanditiis earum tenetur consequatur nobis eligendi. Modi.
+                </div>
+
+            </div>
         </section>
         <!-- fine sezione about -->
 
          <!-- sezione form -->
          <section class="cs-form container-fluid py-3 py-md-4 py-lg-5">
-            <div class="col-8 col-md-6 mx-auto">
-                contenuto form. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem beatae magni. Tempora at facere eligendi dolore asperiores. Repudiandae modi at quis corrupti sapiente eos laborum? Odit ad culpa ullam!
-                Sed, voluptatum dolor. Officia, culpa sequi dicta hic vitae expedita, ipsa nemo repellendus maiores accusantium inventore beatae deserunt provident aut fugit assumenda. Excepturi minima illo sapiente aut nostrum quas nisi?
+            <div class="row">
+                <div class="col-8 col-md-6 mx-auto">
+                    contenuto form. <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem beatae magni. Tempora at facere eligendi dolore asperiores. Repudiandae modi at quis corrupti sapiente eos laborum? Odit ad culpa ullam!
+                    Sed, voluptatum dolor. Officia, culpa sequi dicta hic vitae expedita, ipsa nemo repellendus maiores accusantium inventore beatae deserunt provident aut fugit assumenda. Excepturi minima illo sapiente aut nostrum quas nisi?
+    
+                </div>
 
             </div>
         </section>
@@ -83,9 +92,11 @@
     <footer class="text-white text-center">
             <div class="cs-footer-top">
                 <div class="container py-3">
-                    <div>contenuto footer top. <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolores mollitia at dignissimos magnam doloremque deserunt accusantium commodi impedit repellendus? Quae veritatis nisi enim a? Exercitationem beatae sint non fuga!
-                    Eius deserunt magni mollitia aut ullam, exercitationem, veniam tempore molestias reprehenderit, facere cum excepturi labore! Ad iste, quam ipsa laborum ab odio sit voluptatibus vero provident enim ratione nobis explicabo?</div>
+                    <div class="row row-cols-1 row-cols-md-3">
+                        <div class="col">Contenuto 1</div>
+                        <div class="col">Contenuto 2</div>
+                        <div class="col">Contenuto 3</div>
+                    </div>
                 </div>
                 </div>
             <div class="cs-footer-bot">
