fixe footer-bot

--- a/index.html
+++ b/index.html
@@ -99,11 +99,8 @@
                     </div>
                 </div>
                 </div>
-            <div class="cs-footer-bot">
-                <div class="container">
+            <div class="cs-footer-bot container-fluid">
                     <p>contenuto footer bot</p>
-
-                </div>
             </div>
     </footer>
     <!-- fine footer -->
