--- a/index.html
+++ b/index.html
@@ -13,15 +13,30 @@
 <body>
 
     <!-- header -->
-    <header class="text-white">
+    <header class="text-uppercase fw-bold bg-light-blue">
         <div class="container py-4">
             <div class="row">
-                <div class="col">
-                    header
-                </div>
-                <div class="col text-end">
-                    menu
-                </div>
+                <nav class="navbar cs-navbar navbar-expand-lg bg-light-blue">
+                    <div class="container-fluid">
+                      <a class="navbar-brand cs-nav-link" href="#">start bootstrap</a>
+                      <button class="navbar-toggler cs-navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon cs-navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link cs-nav-link" aria-current="page" href="#">Portfolio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link cs-nav-link" href="#">About</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link cs-nav-link" href="#">Contact</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
             </div>
         </div>
     </header>
@@ -29,6 +44,7 @@
 
     <!-- jumbo -->
     <div class="cs-jumbo text-white">
+        <!-- qui posso non usare row col, perchè è tutto centrato, container fluid potevo metterlo direttamente sul div sopra -->
         <div class="container-fluid py-3 py-md-4 py-lg-5">
             <div class="row">
                 <div class="col-10 col-sm-8 col-lg-6 mx-auto">
@@ -47,6 +63,8 @@
 
         <!-- sezione immagini -->
         <section class="cs-portfolio container">
+            qui dovevo mettere due row diverse, perchè gli elementi di una row dovrebbero essere dello stesso tipo
+            <!-- tipo row con l'h1 e la stellina e poi un'altra row con le immgini -->
             <h1 class="text-center text-uppercase">Portfolio</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">img</div>
@@ -104,5 +122,7 @@
             </div>
     </footer>
     <!-- fine footer -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
