--- a/index.html
+++ b/index.html
@@ -101,16 +101,20 @@
                 <i class="fa-solid fa-star"></i>
                 <div class="line bg-white"></div>
             </div>
-            <div class="row text-start">
-                <div class="col-6 col-md-6 mx-auto">
-                    <p>Freelancer is a free bootstraap theme created by Start Bootstraap.</p>
+            <div class="container">
+                <div class="row cs-about-row text-start justify-content-center fw-medium">
+                    <div class="col-12 col-md-6 mx-auto">
+                        <p>Freelancer is a free bootstraap theme created by Start Bootstraap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    </div>
+                    <div class="col-12 col-md-6 mx-auto">
+                        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    </div>
                 </div>
-                <div class="col-6 col-md-6 mx-auto">
-                    
-                </div>
-
             </div>
-        </section>
+            <button type="button" class="btn cs-button btn-outline-primary my-4">
+                <i class="fa-sharp fa-solid fa-download"></i> Download
+            </button>
+            </section>
         <!-- fine sezione about -->
 
          <!-- sezione form -->
