--- a/index.html
+++ b/index.html
@@ -118,12 +118,34 @@
         <!-- fine sezione about -->
 
          <!-- sezione form -->
-         <section class="cs-form container-fluid py-3 py-md-4 py-lg-5">
+         <section class="cs-form container-fluid py-3 py-md-4">
+            <h2 class="text-center text-uppercase">Contact me </h2>
+            <div class="star-separator d-flex my-4 align-items-center justify-content-center color-blue">
+                <div class="line bg-light-blue"></div>
+                <i class="fa-solid fa-star"></i>
+                <div class="line bg-light-blue"></div>
+            </div>
             <div class="row">
                 <div class="col-8 col-md-6 mx-auto">
-                    contenuto form. <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis autem beatae magni. Tempora at facere eligendi dolore asperiores. Repudiandae modi at quis corrupti sapiente eos laborum? Odit ad culpa ullam!
-                    Sed, voluptatum dolor. Officia, culpa sequi dicta hic vitae expedita, ipsa nemo repellendus maiores accusantium inventore beatae deserunt provident aut fugit assumenda. Excepturi minima illo sapiente aut nostrum quas nisi?
+                    <form action="#" method="GET" >
+                        <div class="mb-1">
+                            <label for="exampleFormControlInput1" class="form-label"></label>
+                            <input type="text" name="name" class="form-control cs-form-control border-0 border-bottom rounded-0" id="exampleFormControlInput1" placeholder="Name">
+                        </div>
+                        <div class="mb-1">
+                            <label for="exampleFormControlInput1" class="form-label"></label>
+                            <input type="email" name="email" class="form-control cs-form-control border-0 border-bottom rounded-0" id="exampleFormControlInput1" placeholder="Email Address">
+                        </div>
+                        <div class="mb-1">
+                            <label for="exampleFormControlInput1" class="form-label"></label>
+                            <input type="tel" name="phone" class="form-control cs-form-control border-0 border-bottom rounded-0" id="exampleFormControlInput1" placeholder="Phone Number">
+                        </div>
+                        <div class="mb-1">
+                            <label for="exampleFormControlTextarea1" class="form-label"></label>
+                            <textarea  name="message" class="form-control cs-form-control border-0 border-bottom rounded-0" id="exampleFormControlTextarea1" rows="6" placeholder="Message"></textarea>
+                        </div>
+                        <button type="button" class="btn bg-green btn-green text-white my-3">Send</button>
+                    </form>
     
                 </div>
 
@@ -138,19 +160,35 @@
     <footer class="text-white text-center">
             <div class="cs-footer-top">
                 <div class="container py-3">
-                    <div class="row row-cols-1 row-cols-md-3">
-                        <div class="col">Contenuto 1</div>
-                        <div class="col">Contenuto 2</div>
-                        <div class="col">Contenuto 3</div>
+                    <div class="row row-cols-1 row-cols-md-3 gx-md-5">
+                        <div class="col my-3">
+                            <h5>LOCATION</h5>
+                            <address>2215 John Daniel Drive Clark, MO 54243</address>
+                        </div>
+                        <div class="col text-uppercase my-3">
+                            <h5>around the web</h5>
+                            <div class="footer-top-icons d-flex justify-content-center gap-3">
+                                <span> <i class="fa-brands fa-facebook-f"></i></span>
+                                <span><i class="fa-brands fa-google-plus-g"></i></span>
+                                <span><i class="fa-brands fa-twitter"></i></span>
+                                <span><i class="fa-brands fa-linkedin-in"></i></span>
+                            </div>
+                        </div>
+                        <div class="col my-3">
+                            <h5>ABOUT FREELANCER</h5>
+                            <p>Freelance is a free to use, open source Bootstraap theme created by <a class="text-green">Start Bootstraap</a>.</p>
+                        </div>
                     </div>
                 </div>
                 </div>
             <div class="cs-footer-bot container-fluid">
-                    <p>contenuto footer bot</p>
+                    <p>Copyright &copy; Your Website 2019</p>
             </div>
     </footer>
     <!-- fine footer -->
+
+    <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
